@@ -1,3 +1,6 @@
+Apr 21, 2023
+  EfoBulkLoad updated to load HP/MP mappings
+
 Apr 11, 2023
   updated CL source to CL release v2023-03-21
   enhanced parsing of date fields
